replace collect(Collectors.toList()) with immutable toList()